repos/k8s-cluster-backup/holm-k8s-cluster/2026-01-28_05-41-54/namespaces/envoy-gateway-system/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    creationTimestamp: "2026-01-20T17:13:23Z"
    generation: 2
    labels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      app.kubernetes.io/name: envoy
      gateway.envoyproxy.io/owning-gateway-name: main-gateway
      gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
    name: envoy-envoy-gateway-system-main-gateway-c3508b54
    namespace: envoy-gateway-system
    resourceVersion: "925"
    uid: 341c37e9-f4ce-4441-9da7-e593e2dbf7c5
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/managed-by: envoy-gateway
        app.kubernetes.io/name: envoy
        gateway.envoyproxy.io/owning-gateway-name: main-gateway
        gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          prometheus.io/path: /stats/prometheus
          prometheus.io/port: "19001"
          prometheus.io/scrape: "true"
        labels:
          app.kubernetes.io/component: proxy
          app.kubernetes.io/managed-by: envoy-gateway
          app.kubernetes.io/name: envoy
          gateway.envoyproxy.io/owning-gateway-name: main-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
      spec:
        automountServiceAccountToken: false
        containers:
        - args:
          - --service-cluster envoy-gateway-system/main-gateway
          - --service-node $(ENVOY_POD_NAME)
          - |
            --config-yaml admin:
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/null
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 19000
            layered_runtime:
              layers:
              - name: global_config
                static_layer:
                  envoy.restart_features.use_eds_cache_for_ads: true
                  re2.max_program_size.error_level: 4294967295
                  re2.max_program_size.warn_level: 1000
            dynamic_resources:
              ads_config:
                api_type: DELTA_GRPC
                transport_api_version: V3
                grpc_services:
                - envoy_grpc:
                    cluster_name: xds_cluster
                set_node_on_first_message_only: true
              lds_config:
                ads: {}
                resource_api_version: V3
              cds_config:
                ads: {}
                resource_api_version: V3
            static_resources:
              listeners:
              - name: envoy-gateway-proxy-ready-0.0.0.0-19001
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 19001
                    protocol: TCP
                filter_chains:
                - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      stat_prefix: eg-ready-http
                      route_config:
                        name: local_route
                        virtual_hosts:
                        - name: prometheus_stats
                          domains:
                          - "*"
                          routes:
                          - match:
                              prefix: /stats/prometheus
                            route:
                              cluster: prometheus_stats
                      http_filters:
                      - name: envoy.filters.http.health_check
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                          pass_through_mode: false
                          headers:
                          - name: ":path"
                            string_match:
                              exact: /ready
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              clusters:
              - name: prometheus_stats
                connect_timeout: 0.250s
                type: STATIC
                lb_policy: ROUND_ROBIN
                load_assignment:
                  cluster_name: prometheus_stats
                  endpoints:
                  - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: 127.0.0.1
                            port_value: 19000
              - connect_timeout: 10s
                load_assignment:
                  cluster_name: xds_cluster
                  endpoints:
                  - load_balancing_weight: 1
                    lb_endpoints:
                    - load_balancing_weight: 1
                      endpoint:
                        address:
                          socket_address:
                            address: envoy-gateway
                            port_value: 18000
                typed_extension_protocol_options:
                  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                    "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
                    explicit_http_config:
                      http2_protocol_options:
                        connection_keepalive:
                          interval: 30s
                          timeout: 5s
                name: xds_cluster
                type: STRICT_DNS
                transport_socket:
                  name: envoy.transport_sockets.tls
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                    common_tls_context:
                      tls_params:
                        tls_maximum_protocol_version: TLSv1_3
                      tls_certificate_sds_secret_configs:
                      - name: xds_certificate
                        sds_config:
                          path_config_source:
                            path: /sds/xds-certificate.json
                          resource_api_version: V3
                      validation_context_sds_secret_config:
                        name: xds_trusted_ca
                        sds_config:
                          path_config_source:
                            path: /sds/xds-trusted-ca.json
                          resource_api_version: V3
              - name: wasm_cluster
                type: STRICT_DNS
                connect_timeout: 10s
                load_assignment:
                  cluster_name: wasm_cluster
                  endpoints:
                  - load_balancing_weight: 1
                    lb_endpoints:
                    - load_balancing_weight: 1
                      endpoint:
                        address:
                          socket_address:
                            address: envoy-gateway
                            port_value: 18002
                typed_extension_protocol_options:
                  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                    "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
                    explicit_http_config:
                      http2_protocol_options: {}
                transport_socket:
                  name: envoy.transport_sockets.tls
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
                    common_tls_context:
                      tls_params:
                        tls_maximum_protocol_version: TLSv1_3
                      tls_certificate_sds_secret_configs:
                      - name: xds_certificate
                        sds_config:
                          path_config_source:
                            path: /sds/xds-certificate.json
                          resource_api_version: V3
                      validation_context_sds_secret_config:
                        name: xds_trusted_ca
                        sds_config:
                          path_config_source:
                            path: /sds/xds-trusted-ca.json
                          resource_api_version: V3
            overload_manager:
              refresh_interval: 0.25s
              resource_monitors:
              - name: "envoy.resource_monitors.global_downstream_max_connections"
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
                  max_active_downstream_connections: 50000
          - --log-level warn
          - --cpuset-threads
          - --drain-strategy immediate
          - --drain-time-s 60
          command:
          - envoy
          env:
          - name: ENVOY_GATEWAY_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: ENVOY_POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          image: envoyproxy/envoy:distroless-v1.32.1
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              httpGet:
                path: /shutdown/ready
                port: 19002
                scheme: HTTP
          name: envoy
          ports:
          - containerPort: 10080
            name: http-80
            protocol: TCP
          - containerPort: 10443
            name: https-443
            protocol: TCP
          - containerPort: 19001
            name: metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ready
              port: 19001
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /ready
              port: 19001
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /certs
            name: certs
            readOnly: true
          - mountPath: /sds
            name: sds
        - args:
          - envoy
          - shutdown-manager
          command:
          - envoy-gateway
          env:
          - name: ENVOY_GATEWAY_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: ENVOY_POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          image: envoyproxy/gateway:v1.2.2
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - envoy-gateway
                - envoy
                - shutdown
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: shutdown-manager
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: 19002
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: envoy-envoy-gateway-system-main-gateway-c3508b54
        serviceAccountName: envoy-envoy-gateway-system-main-gateway-c3508b54
        terminationGracePeriodSeconds: 360
        volumes:
        - name: certs
          secret:
            defaultMode: 420
            secretName: envoy
        - configMap:
            defaultMode: 420
            items:
            - key: xds-trusted-ca.json
              path: xds-trusted-ca.json
            - key: xds-certificate.json
              path: xds-certificate.json
            name: envoy-envoy-gateway-system-main-gateway-c3508b54
            optional: false
          name: sds
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-20T17:13:23Z"
      lastUpdateTime: "2026-01-22T01:36:04Z"
      message: ReplicaSet "envoy-envoy-gateway-system-main-gateway-c3508b54-86bc6889ff"
        has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-01-27T04:38:18Z"
      lastUpdateTime: "2026-01-27T04:38:18Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"eg","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"gateway-helm","app.kubernetes.io/version":"latest","control-plane":"envoy-gateway","helm.sh/chart":"gateway-helm-v0.0.0-latest"},"name":"envoy-gateway","namespace":"envoy-gateway-system"},"spec":{"replicas":1,"selector":{"matchLabels":{"app.kubernetes.io/instance":"eg","app.kubernetes.io/name":"gateway-helm"," [...]
    creationTimestamp: "2026-01-19T03:34:47Z"
    generation: 4
    labels:
      app.kubernetes.io/instance: eg
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: gateway-helm
      app.kubernetes.io/version: latest
      control-plane: envoy-gateway
      helm.sh/chart: gateway-helm-v0.0.0-latest
    name: envoy-gateway
    namespace: envoy-gateway-system
    resourceVersion: "983912"
    uid: 73c1c280-5af2-4a5f-b8d4-8e72ac156328
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/instance: eg
        app.kubernetes.io/name: gateway-helm
        control-plane: envoy-gateway
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-01-24T18:12:11-08:00"
          prometheus.io/port: "19001"
          prometheus.io/scrape: "true"
        labels:
          app.kubernetes.io/instance: eg
          app.kubernetes.io/name: gateway-helm
          control-plane: envoy-gateway
      spec:
        containers:
        - args:
          - server
          - --config-path=/config/envoy-gateway.yaml
          env:
          - name: ENVOY_GATEWAY_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: KUBERNETES_CLUSTER_DOMAIN
            value: cluster.local
          image: envoyproxy/gateway:v1.2.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          name: envoy-gateway
          ports:
          - containerPort: 18000
            name: grpc
            protocol: TCP
          - containerPort: 18001
            name: ratelimit
            protocol: TCP
          - containerPort: 18002
            name: wasm
            protocol: TCP
          - containerPort: 19001
            name: metrics
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: envoy-gateway-config
            readOnly: true
          - mountPath: /certs
            name: certs
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: envoy-gateway
        serviceAccountName: envoy-gateway
        terminationGracePeriodSeconds: 10
        volumes:
        - configMap:
            defaultMode: 420
            name: envoy-gateway-config
          name: envoy-gateway-config
        - name: certs
          secret:
            defaultMode: 420
            secretName: envoy-gateway
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-01-19T03:34:47Z"
      lastUpdateTime: "2026-01-25T02:15:47Z"
      message: ReplicaSet "envoy-gateway-86655868cc" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-01-28T05:31:14Z"
      lastUpdateTime: "2026-01-28T05:31:14Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
